Fixing nits